Wip - Cart item cleanup.

--- a/themes/foundation/store/scss/main.scss
+++ b/themes/foundation/store/scss/main.scss
@@ -16,6 +16,7 @@
 @import "pages/cart/added";
 @import "pages/cart/cart-sidebar";
 @import "pages/cart/cart-list";
+@import "pages/cart/cart-item-options";
 
 @import "component/forms";
 @import "component/media-object";
