--- a/themes/foundation/store/scss/pages/product/_show.scss
+++ b/themes/foundation/store/scss/pages/product/_show.scss
@@ -40,3 +40,7 @@
 .zk-product-tags {
   @include flex-column($gutter: true);
 }
+
+.zk-related-products {
+  @include flex-column($gutter: true);
+}
