--- a/themes/foundation/store/templates/product/parts/tags.twig
+++ b/themes/foundation/store/templates/product/parts/tags.twig
@@ -1,4 +1,4 @@
-<article class="zk-tags">
+<article class="zk-product-tags">
     <h5>Tags</h5>
     <ul class="zk-tag-list">
         {% for tag in tags if tag.isVisible %}
