--- a/themes/foundation/store/scss/component/_forms.scss
+++ b/themes/foundation/store/scss/component/_forms.scss
@@ -1,19 +1,28 @@
 .zk-submit-anchor {
-    padding: 0;
-    line-height: inherit;
-    color: $anchor-color;
-    text-decoration: $anchor-text-decoration;
-    cursor: pointer;
+  @include button;
+  @include button-hollow;
+  @include button-hollow-style;
+  font-size: 0.8rem;
+  padding: rem-calc(7.5 10);
+  margin: 0;
 
-    &:hover,
-    &:focus {
-      color: $anchor-color-hover;
-      @if $anchor-text-decoration-hover != $anchor-text-decoration {
-        text-decoration: $anchor-text-decoration-hover;
+  &.expanded { @include button-expand; }
+
+  @each $name, $color in $button-palette {
+    &.#{$name} {
+      @include button-hollow-style($color);
+    }
+  }
+
+  // Disabled style
+  &.disabled,
+  &[disabled] {
+    @include button-disabled;
+
+    @each $name, $color in $button-palette {
+      &.#{$name} {
+        @include button-disabled($color);
       }
     }
-
-    img {
-      border: 0;
-    }
+  }
 }
