--- a/themes/foundation/store/scss/pages/cart/_cart-list.scss
+++ b/themes/foundation/store/scss/pages/cart/_cart-list.scss
@@ -2,7 +2,7 @@
 
   .zk-cart-list-header {
     @include hide-for-only(small);
-    @include flex-grid-row($behavior: nest);
+    @include flex-grid-row();
     width: 100%;
 
     h4 {
@@ -11,7 +11,8 @@
   }
 
   .zk-cart-list-item {
-    @include flex-grid-row($behavior: nest);
+    @include flex-grid-row();
+    width: 100%;
     padding: {
       top: 15px;
       bottom: 15px;
@@ -19,6 +20,10 @@
 
     &:nth-child(odd) {
       background-color: $light-gray;
+    }
+
+    img {
+      max-height: rem-calc(150);
     }
   }
 }
@@ -28,6 +33,12 @@
 
   @include breakpoint(medium) {
     @include flex-column($size: 6);
+  }
+
+  @include breakpoint(medium only) {
+    .thumbnail {
+      width: auto;
+    }
   }
 }
 
@@ -45,11 +56,23 @@
   @include breakpoint(medium) {
     @include flex-column($size: 3);
   }
+
+  .zk-cart-list-item-price {
+    font-weight: bold;
+  }
 }
 
-.zk-cell header {
-  @include show-for-only(small);
+.zk-cell {
+  margin: {
+    top: 10px;
+    bottom: 10px;
+  };
+
+  header {
+    @include show-for-only(small);
+  }
 }
+
 
 .zk-cart-list-item-name {
   font-size: 1.2rem;
