Clean up totals.
Wip mobile view still has an overflow-x issue.

--- a/themes/foundation/store/scss/main.scss
+++ b/themes/foundation/store/scss/main.scss
@@ -13,6 +13,7 @@
 @import "pages/product/show";
 
 @import "pages/cart/show";
+@import "pages/cart/totals";
 @import "pages/cart/added";
 @import "pages/cart/cart-sidebar";
 @import "pages/cart/cart-list";
