--- a/themes/bootstrap/store/templates/product/show.twig
+++ b/themes/bootstrap/store/templates/product/show.twig
@@ -189,7 +189,7 @@
                         <div class="divider"></div>
                         <div class="other-actions">
                             <div id="social-actions">
-                                <a  href="https://www.facebook.com/sharer/sharer.php?u={{ product.fullUrl }}"
+                                <a  href="https://www.facebook.com/sharer/sharer.php?u={{ productUrl(product) }}"
                                     class="btn btn-primary btn-xs facebook-share"
                                     target="_blank">
                                     <i class="fa fa-share"></i> Share on Facebook
