--- a/themes/foundation/store/templates/product/show.twig
+++ b/themes/foundation/store/templates/product/show.twig
@@ -101,13 +101,11 @@
             {% endif %}
 
             <div class="small secondary expanded button-group">
-                <a href="https://www.facebook.com/sharer/sharer.php?u={{ product.fullUrl }}"
+                <a href="https://www.facebook.com/sharer/sharer.php?u={{ productUrl(product) }}"
                    class="button"
                    target="_blank">
-                    <i class="fa fa-facebook"></i> Facebook
+                    <i class="fa fa-facebook"></i> Share on Facebook
                 </a>
-                <a class="button">Twitter</a>
-                <a class="button">Yo</a>
             </div>
 
         </article>
