--- a/themes/bootstrap/admin/templates/warehouse/new.twig
+++ b/themes/bootstrap/admin/templates/warehouse/new.twig
@@ -1,29 +1,29 @@
-{# @var attribute \inklabs\kommerce\EntityDTO\AttributeDTO #}
+{# @var warehouse \inklabs\kommerce\EntityDTO\WarehouseDTO #}
 {# @var promotionTypes array #}
 {% extends '@admin/layout/base.twig' %}
 
-{% block pageTitle %}New Attribute{% endblock %}
+{% block pageTitle %}New Warehouse{% endblock %}
 
 {% block content %}
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h3>New Attribute</h3>
-                <form action="{{ routeUrl('admin.attribute.new.post') }}"
+                <h3>New Warehouse</h3>
+                <form action="{{ routeUrl('admin.warehouse.new.post') }}"
                       method="post"
                       class="form-horizontal"
                       role="form">
                     <fieldset>
                         {{ form.csrf() }}
                         <div class="well">
-                            {% include '@admin/attribute/parts/attribute-input-fields.twig' %}
+                            {% include '@admin/warehouse/parts/warehouse-input-fields.twig' %}
                         </div>
 
                         <div class="well">
                             <button type="submit" class="btn btn-primary">
                                 <i class="fa fa-check-circle"></i> Create
                             </button>
-                            <a href="{{ routeUrl('admin.attribute') }}" class="btn btn-default">Cancel</a>
+                            <a href="{{ routeUrl('admin.warehouse') }}" class="btn btn-default">Cancel</a>
                         </div>
                     </fieldset>
                 </form>
