Adding warehouse inventory locations.

--- a/themes/bootstrap/admin/templates/layout/parts/header.twig
+++ b/themes/bootstrap/admin/templates/layout/parts/header.twig
@@ -22,7 +22,7 @@
                         <li><a href="{{ routeUrl('admin.tag') }}">Tags</a></li>
                         <li><a href="{{ routeUrl('admin.option') }}">Options</a></li>
                         <li><a href="{{ routeUrl('admin.attribute') }}">Attributes</a></li>
-                        <li><a href="{{ routeUrl('admin.warehouse') }}">Inventory</a></li>
+                        <li><a href="{{ routeUrl('admin.warehouse') }}">Warehouses</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
