--- a/themes/bootstrap/admin/templates/product/parts/product-list-body.twig
+++ b/themes/bootstrap/admin/templates/product/parts/product-list-body.twig
@@ -1,4 +1,4 @@
-{# @var products \inklabs\kommerce\EntityDTO\ProductDTO[] #}
+{# @var product \inklabs\kommerce\EntityDTO\ProductDTO #}
 <td>
     <a href="{{ adminProductUrl(product) }}">
         <img src="{{ productImageUrl(product) }}"
