--- a/themes/bootstrap/admin/templates/attribute/attribute-value/parts/navigation.twig
+++ b/themes/bootstrap/admin/templates/attribute/attribute-value/parts/navigation.twig
@@ -1,4 +1,4 @@
-{# @var attributeValue \inklabs\kommerce\EntityDTO\AttributeDTO #}
+{# @var attributeValue \inklabs\kommerce\EntityDTO\AttributeValueDTO #}
 
 {% set navigation = [
     {
