--- a/themes/bootstrap/admin/templates/warehouse/inventory-location/parts/actions.twig
+++ b/themes/bootstrap/admin/templates/warehouse/inventory-location/parts/actions.twig
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="col-sm-6">
         Warehouse -
-        <a href="{{ routeUrl('admin.warehouse.inventory-locations', {'warehouseId': inventoryLocation.warehouse.id.hex}) }}">
+        <a id="view-warehouse-inventory-locations" href="{{ routeUrl('admin.warehouse.inventory-locations', {'warehouseId': inventoryLocation.warehouse.id.hex}) }}">
             {{ inventoryLocation.warehouse.name }}
         </a>
         <br>
