Adding inventory transactions.

--- a/themes/bootstrap/admin/templates/warehouse/inventory-location/parts/navigation.twig
+++ b/themes/bootstrap/admin/templates/warehouse/inventory-location/parts/navigation.twig
@@ -8,6 +8,10 @@
     {
         'name': 'Products',
         'url' : routeUrl('admin.warehouse.inventory-location.products', {'inventoryLocationId': inventoryLocation.id.hex})
+    },
+    {
+        'name': 'Inventory Transactions',
+        'url' : routeUrl('admin.warehouse.inventory-location.inventory-transactions', {'inventoryLocationId': inventoryLocation.id.hex})
     }
 ] %}
 
