Correcting namespace for kommerce-core

--- a/themes/bootstrap/admin/templates/helper/order-payments.twig
+++ b/themes/bootstrap/admin/templates/helper/order-payments.twig
@@ -1,4 +1,4 @@
-{# order \inklabs\KohanaKommerce\EntityDTO\OrderDTO #}
+{# order \inklabs\kommerce\EntityDTO\OrderDTO #}
 {% for payment in order.payments %}
     <div>
         {% if payment.chargeResponse.last4 is not empty %}
