--- a/themes/bootstrap/store/templates/product/parts/options.twig
+++ b/themes/bootstrap/store/templates/product/parts/options.twig
@@ -1,4 +1,4 @@
-{# @var option \inklabs\KohanaKommerce\EntityDTO\OptionDTO #}
+{# @var option \inklabs\kommerce\EntityDTO\OptionDTO #}
 {# @var selectedOptions array #}
 
 {% if option.type.isSelect %}
