--- a/themes/foundation/store/templates/product/parts/text-options.twig
+++ b/themes/foundation/store/templates/product/parts/text-options.twig
@@ -1,4 +1,4 @@
-{# @var textOption \inklabs\KohanaKommerce\EntityDTO\TextOptionDTO #}
+{# @var textOption \inklabs\kommerce\EntityDTO\TextOptionDTO #}
 {# @var selectedOptions array #}
 
 {% if textOption.type.isText %}
